--- a/angular-client/package.json
+++ b/angular-client/package.json
@@ -25,6 +25,8 @@
     "bootswatch": "^3.3.7",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jwt-decode": "^2.2.0",
+    "moment": "^2.20.1",
     "ngx-bootstrap": "^2.0.0-rc.0",
     "ngx-toastr": "^8.1.0",
     "rxjs": "^5.5.2",
