--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "*",
     "jsonwebtoken": "*",
     "lodash": "^4.17.4",
+    "moment": "^2.20.1",
     "mongoose": "*",
     "passport": "*",
     "passport-jwt": "*"
