--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "meanapp",
   "version": "1.0.0",
-  "description": "Mean App Practice",
+  "description": "Mean App",
   "main": "app.js",
   "scripts": {
     "start": "node app",
